# adhd-briefing-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.omc/plans/: mvp-faza-c-capture.md
brainstorming/: adhd-app-brainstorming.md
docs/: adhd-content-guidelines.md  architecture.md  dev-guide.md  progress.md  source-benchmark.md
evals/: __init__.py  checks.py  golden_set.py  judge.py  prompt_variants.py  run.py
src/adhd_briefing/: __init__.py  bot.py  cli.py  config.py  models.py
src/adhd_briefing/db/: __init__.py  database.py  schema.sql
src/adhd_briefing/graphs/: __init__.py  briefing.py  onboarding.py  state.py
src/adhd_briefing/llm/: __init__.py  pricing.py  summarizer.py
src/adhd_briefing/notify/: __init__.py  base.py  telegram.py
src/adhd_briefing/sources/: __init__.py  base.py  discovery.py  factory.py  rss.py  scraper.py  text.py
tests/: benchmark_sources.py  test_briefing_graph.py  test_database.py  test_discovery.py  test_notifier.py  test_onboarding_graph.py  test_pricing.py  test_sources.py
