[project]
name = "adhd-briefing"
version = "0.1.0"
description = "ADHD-friendly daily briefing bot — Capture phase (CRA model)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.74",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-telegram-bot>=20.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "httpx>=0.27",
    "anthropic>=0.39",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
